--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue2-hover-intent",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Hover intent",
   "main": "src/index.js",
   "scripts": {
@@ -12,6 +12,8 @@
   },
   "keywords": [
     "vue2",
+    "vue",
+    "hover-intent",
     "hover",
     "intent"
   ],
